2023/day-02/src/bin/snapshots/part_two__test__snapshot_game_parse-2.snap
---
source: day-two/src/bin/part_two.rs
expression: "Game::parse(input_2)"
---
Ok(
    (
        "",
        Game {
            game_num: 2,
            hands: [
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 1,
                            color: Blue,
                        },
                        ColorCount {
                            count: 2,
                            color: Green,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 3,
                            color: Green,
                        },
                        ColorCount {
                            count: 4,
                            color: Blue,
                        },
                        ColorCount {
                            count: 1,
                            color: Red,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 1,
                            color: Green,
                        },
                        ColorCount {
                            count: 1,
                            color: Blue,
                        },
                    ],
                },
            ],
        },
    ),
)
