2023/day-02/src/bin/snapshots/part_two__test__snapshot_game_parse-4.snap
---
source: day-two/src/bin/part_two.rs
expression: "Game::parse(input_4)"
---
Ok(
    (
        "",
        Game {
            game_num: 4,
            hands: [
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 1,
                            color: Green,
                        },
                        ColorCount {
                            count: 3,
                            color: Red,
                        },
                        ColorCount {
                            count: 6,
                            color: Blue,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 3,
                            color: Green,
                        },
                        ColorCount {
                            count: 6,
                            color: Red,
                        },
                    ],
                },
                Hand {
                    color_counts: [
                        ColorCount {
                            count: 3,
                            color: Green,
                        },
                        ColorCount {
                            count: 15,
                            color: Blue,
                        },
                        ColorCount {
                            count: 14,
                            color: Red,
                        },
                    ],
                },
            ],
        },
    ),
)
